fix: Bootstrap button spacing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,3 +39,7 @@ h2 {
   text-align: center;
   font-size: 1.1em;
 }
+
+.btnset * {
+  margin: 0 .3em;
+}
